Fix alignment of description in activity detail view

--- a/intranet/static/css/eighth.css
+++ b/intranet/static/css/eighth.css
@@ -156,7 +156,7 @@
     width: 100%;
 }
 
-.activities {
+#activity-list {
     float: left;
     left: 0;
     right: 450px;
@@ -168,7 +168,7 @@
 }
 
 
-.activity-detail {
+#activity-detail {
     display: block;
     position: absolute;
     float: right;
@@ -184,24 +184,28 @@ h3 {
     font-size: 20px;
 }
 
-.activities ul {
+#activity-list ul {
     padding: 0;
     list-style: none;
     cursor: pointer;
 }
 
-.activity-detail dt {
+#activity-detail dt {
     float: left;
     padding-right: 5px;
 }
 
-.activity-detail dd, .activity-detail dt {
+#activity-detail dd, #activity-detail dt {
     font-size: 15px;
 }
 
 dt.description {
     margin-top: 1em;
     float: none;
+}
+
+dd.description {
+    margin-top: 1em;
 }
 
 h5 {
@@ -226,14 +230,14 @@ h5.hidden {
     display: none;
 }
 
-.activities li {
+#activity-list li {
     height: 25px;
     line-height: 25px;
     padding: 0 10px;
 }
 
 
-.activities li:nth-child(odd) {
+#activity-list li:nth-child(odd) {
     background-color: rgba(0,0,0,0.05);
 }
 
